-------------
Improved visualization of changed modules in the shipbuilder
- Shows if the module has been changed by highlighting it in blue
- Shows if only the experimental effect has been changed by highlighting it in blue
- Shows a changed icon in the bottom left of the module
Disabled SCO drives, lifesupport and sensors buttons that are of different sizes than the slot, to match ingame
Added missing size 6 Luxury cabins to orca, dolphin, beluga

Version 2.129
-------------
Remove techbroker blueprints for Caustic Sink and Pulse Neutralizer
Retrieve techbroker and trader data from github so it won't require a new release for updates
Move Spirit of Laelaps to V886 Centauri
Gracefully handle issue when listing commanders

Version 2.128
-------------
Update resque ships locations/existence
Add powerplay totals to odyssey materials tab
Remove error popup for when you don't own a fleetcarrier
more memory efficiently queue audio

Version 2.127
-------------
Add new FSD V1 SCO modules and techbroker unlocks
Fix Cobra Mk V stats

Version 2.126
-------------
Add Corba Mk V image

Version 2.125
-------------
Bugfix for autoupdater failing to launch the application with an ampersand(&) in the path
Fix clip size and burst size for Double Shot experimental effect on Fragment Cannon
Add more detailed values to Concord Cannon
Remove Tactical Core Chip from blueprint requirements
Queue notification sounds to prevent overlapping sounds
Add Cobra Mk V (images WIP)
Add Cobra Mk V Armour Modules

Version 2.124
-------------
Bugfix application fails to start due to missing care packages events and engineering events causing quantities < 0
Trim whitespace from engineer blueprints on ship wishlist

Version 2.123
-------------
Allow searching for spawn locations in ship materials tab
Update Type-8 boost interval
Allow module stats to run down further to be able to show the full range of stats
Correct boost interval for Python Mk2

Version 2.122
-------------